[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DHNpype"
version = "1.0.0"
description = "A simple district heating and cooling modeller"
authors = [{ name = "Marko Keber", email = "marko.keber@fs.uni-lj.si" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]  
